# cLoRA

./: .gitignore  README.md  eval.py  generate_synth_data.py  lol.ipynb  main.py  models.py  process_nemotron.py  pyproject.toml  screenshot_testing.py  synth_data.json
app/: README.md  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css
datagen/: .gitignore  README.md  data_gen.py  eval.py  generate_synth_data.py  live_processor.py  lol.ipynb  models.py  pyproject.toml  screenshot_testing.py  synth_data.csv
datagen/imgs/eval/: eval_questions.txt
datagen/output/: result_1.json
infra/: calhacks_Data.csv  lora.py  requirements.txt  start_vllm.sh  workflow.py  workflow.sh
infra/app/: main.py  test_app.py
infra/data/: recent_examples.jsonl
infra/test/: test_loop.py  test_sample.sh  test_update_server.sh  test_wo_lora.py
